--- a/colors-web-auth/bower.json
+++ b/colors-web-auth/bower.json
@@ -18,6 +18,7 @@
     "ember": "~1.5.0",
     "ember-model": "~0.0.11",
     "modernizr": "~2.7.1",
+    "util": "~3.24.10",
     "ember-simple-auth": "https://github.com/simplabs/ember-simple-auth-component.git"
   },
   "overrides": {
