--- a/colors-web-auth/bower.json
+++ b/colors-web-auth/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "colors-web-ajax",
+  "name": "colors-web-auth",
   "version": "0.0.0",
   "description": "Brunch skeleton for Ember with ES6 Modules",
   "authors": [
@@ -17,6 +17,7 @@
     "bootstrap": "~3.1.1",
     "ember": "~1.5.0",
     "ember-model": "~0.0.11",
+    "ember-data": "~1.0.0",
     "modernizr": "~2.7.1",
     "util": "~3.24.10",
     "ember-simple-auth": "https://github.com/simplabs/ember-simple-auth-component.git"
