--- a/colors-play-deadbolt/conf/application.conf
+++ b/colors-play-deadbolt/conf/application.conf
@@ -27,3 +27,6 @@ logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
+logger.securesocial=TRACE
+
+include "securesocial.conf"
