integrating ember-simple-auth & securesocial

--- a/colors-play-deadbolt/conf/application.conf
+++ b/colors-play-deadbolt/conf/application.conf
@@ -29,4 +29,10 @@ logger.play=INFO
 logger.application=DEBUG
 logger.securesocial=TRACE
 
+
+play.akka.actor.slick-context.fork-join-executor {
+  parallelism-min = 300
+  parallelism-max = 300
+}
+
 include "securesocial.conf"
