--- a/colors-play-deadbolt/conf/securesocial.conf
+++ b/colors-play-deadbolt/conf/securesocial.conf
@@ -42,12 +42,12 @@ securesocial {
 	# Where to redirect the user if SecureSocial can't figure that out from
 	# the request that led the use to the login page
 	#
-	onLoginGoTo=/
+	#onLoginGoTo=/
 
 	#
 	# Where to redirect the user when he logs out. If not set SecureSocial will redirect to the login page
 	#
-	onLogoutGoTo=/login
+	#onLogoutGoTo=/login
 
 	#
 	# Where to redirect the user when he/she starts the signup process.
