--- a/colors-play-deadbolt/conf/securesocial.conf
+++ b/colors-play-deadbolt/conf/securesocial.conf
@@ -47,7 +47,7 @@ securesocial {
 	#
 	# Where to redirect the user when he logs out. If not set SecureSocial will redirect to the login page
 	#
-	#onLogoutGoTo=/login
+	onLogoutGoTo=/
 
 	#
 	# Where to redirect the user when he/she starts the signup process.
@@ -132,7 +132,7 @@ securesocial {
 		#
 		# Enable username support, otherwise SecureSocial will use the emails as user names
 		#
-		withUserNameSupport=false
+		withUserNameSupport=true
 		sendWelcomeEmail=true
 		enableGravatarSupport=false
 		tokenDuration=60
